# unicycle-footstep-planner

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  conda-forge-ci.yml
TechnicalReport/: Bibliography.bib  unicycleReport.tex
TechnicalReport/tex/: problem.tex  unicycle.tex
cmake/: FindEigen3.cmake  unicyclePlannerConfig.cmake.in
include/: CoMHeightTrajectoryGenerator.h  ControlledUnicycle.h  DCMTrajectoryGenerator.h  DCMTrajectoryGeneratorHelper.h  DcmTrajectoryGenerator.h  FeetCubicSplineGenerator.h  FeetGenerator.h  FeetMinimumJerkGenerator.h  FootPrint.h  FootPrintsInterpolator.h  FreeSpaceEllipse.h  PersonFollowingController.h  PosesPairInterpolator.h  StepPhase.h  UnicycleBaseController.h  UnicycleController.h  UnicycleDirectController.h  UnicycleFoot.h  UnicycleGenerator.h  UnicycleNavigationController.h  UnicycleOptimization.h  UnicyclePlanner.h  UnicycleState.h  UnicycleTrajectoryGenerator.h  ZMPTrajectoryGenerator.h
misc/MATLAB/: load_data.m  plot_dcm.m  plot_footsteps.m
src/: CoMHeightTrajectoryGenerator.cpp  ControlledUnicycle.cpp  DCMTrajectoryGenerator.cpp  DCMTrajectoryGeneratorHelper.cpp  DcmTrajectoryGenerator.cpp  FeetCubicSplineGenerator.cpp  FeetGenerator.cpp  FeetMinimumJerkGenerator.cpp  FootPrint.cpp  FootPrintsInterpolator.cpp  FreeSpaceEllipse.cpp  PersonFollowingController.cpp  PosesPairInterpolator.cpp  UnicycleBaseController.cpp  UnicycleController.cpp  UnicycleDirectController.cpp  UnicycleFoot.cpp  UnicycleGenerator.cpp  UnicycleNavigationController.cpp  UnicycleOptimization.cpp  UnicyclePlanner.cpp  UnicycleTrajectoryGenerator.cpp  ZMPTrajectoryGenerator.cpp
tests/: CMakeLists.txt  DcmInterpolationTest.cpp  InterpolationTest.cpp  ProtoCode.cpp  UnicyclePathFollowerTest.cpp  UnicycleTest.cpp  interpolationTest.cpp  package.xml  utils.cpp  utils.h
